@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<portlets
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    i18n:domain="plone">
+
+    <assignment
+        manager="plone.leftcolumn"
+        category="context"
+        key="/"
+        type="portlets.Calendar"
+        name="calendar"
+        remove="" />
+
+</portlets>
